Release CMTK-1.4.0 (2010-07-08):

- Improved: log-Intensity histograms are now value scale invariant.
- Removed: building against VTK is no longer supported.
- Added: class for histogram population and entropy computation on GPU
    device.
- Added: vtkxform tool can now read (and write) binary-coded VTK files.
- Added: first utility classes (memory allocation and resource management,
    volume data transfer) for GPU computation using CUDA.
- Testing: added test name to function mapper cmtk::TestFunctionMap to
    simplify writing of test drivers.
- API: some Numerics functions from AlgLib were moved into ::alglib namespace
    to avoid clashes with functions also defined elsewhere (e.g., gamma, erf,
    etc).
- Refactored: thread function within thread pool is now provided with thread
    index directly, rather having to perform a lookup (Issue #4939).
- Added: cmtk::CommandLine class prints warning message if not all command
    line arguments are actually used. This usually points to a usage error.
- Added: 'vtkxform' tool now accepts list of transformations, each of which
    can be inverted.
- API: change interface of SplineWarpXform::getTransformedGridSequence() to
    isolate "number of points" parameter and make it harder to use this
    incorrectly.
- Refactored: use more smart pointers in more places. Standardize Clone() and
    Create() member functions of different classes.
- Improved: parallelized computation of FFD smoothness constraint. This
    greatly improves multicore scaling of nonrigid registration using this
    constraint. 
- Removed: "describe" tool no longer prints center of mass and first-order
    moments. If we ever need this, we'll make a separate tool for this.
- Refactored: further consolidated Vector3D into FixedVector
- Documentation: marked VTKWrapper library as deprecated.


Release CMTK-1.3.1 (2010-06-07):

- Added: "vtkxform" tool to apply transformation to point coordinates in VTK