@@ -210,33 +210,24 @@ ELSE (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}.${CMAKE_PATCH_VERSION} STRLE
 ENDIF (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}.${CMAKE_PATCH_VERSION} STRLESS 2.6.2)
 
 #-----------------------------------------------------------------------------
-# Enable GPU support
-
-OPTION(CMTK_CONFIG_GPU "Configure GPU computing" OFF)
-
-#-----------------------------------------------------------------------------
 # Check for, and configure, OpenCL
 
-##IF(CMTK_CONFIG_GPU)
+##    OPTION(CMTK_USE_OPENCL "Use OpenCL for GPU computing" OFF)
+##  IF(CMTK_USE_OPENCL)
 ##  INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/CMakeFiles/FindOpenCL.cmake)
 ##  IF(OPENCL_FOUND)
-##    OPTION(CMTK_USE_OPENCL "Use OpenCL for GPU computing" OFF)
 ##  ENDIF(OPENCL_FOUND)
 ##
-##  IF(CMTK_USE_OPENCL)
 ##    ADD_DEFINITIONS(-DCMTK_USE_OPENCL)
 ##  ENDIF(CMTK_USE_OPENCL)
-##
-##ELSE(CMTK_CONFIG_GPU)
-##  IF(CMTK_USE_OPENCL)
-##    SET(CMTK_USE_OPENCL OFF CACHE BOOL "Use OpenCL for GPU computing")
-##  ENDIF(CMTK_USE_OPENCL)
-##ENDIF(CMTK_CONFIG_GPU)
 
 #-----------------------------------------------------------------------------
 # Check for, and configure, CUDA
 
-IF(CMTK_CONFIG_GPU)
+OPTION(CMTK_USE_CUDA "Use CUDA for GPU computing" OFF)
+
+IF(CMTK_USE_CUDA)
+
   # check using cmake's own FindCUDA above v2.8 or use our own for earlier versions
   IF (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} STRLESS 2.8)
     INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/CMakeFiles/FindCUDA.cmake)
@@ -245,18 +236,10 @@ IF(CMTK_CONFIG_GPU)
   ENDIF(${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} STRLESS 2.8)
   
   IF(CUDA_FOUND)
-    OPTION(CMTK_USE_CUDA "Use CUDA for GPU computing" OFF)
+    ADD_DEFINITIONS(-DCMTK_USE_CUDA)
   ENDIF(CUDA_FOUND)
 
-  IF(CMTK_USE_CUDA)
-    ADD_DEFINITIONS(-DCMTK_USE_CUDA)
-  ENDIF(CMTK_USE_CUDA)
-
-ELSE(CMTK_CONFIG_GPU)
-  IF(CMTK_USE_CUDA)
-    SET(CMTK_USE_CUDA OFF CACHE BOOL "Use CUDA for GPU computing")
-  ENDIF(CMTK_USE_CUDA)
-ENDIF(CMTK_CONFIG_GPU)
+ENDIF(CMTK_USE_CUDA)
 
 #-----------------------------------------------------------------------------
 # Check whether compiler supports variable-size automatic arrays, i.e.,
